fix row-gap

--- a/styles/Skills.module.scss
+++ b/styles/Skills.module.scss
@@ -28,12 +28,12 @@
         display: grid;
         grid-template-columns: repeat(5, 1fr); // 5 cards per row
         grid-template-rows: repeat(2, auto); // Two rows
-        row-gap: 0.5rem;
-        column-gap: 1rem;
+        row-gap: 0.25rem;
+        column-gap: 0.75rem;
         align-items: center;
         justify-items: center;
         justify-content: center;
-        margin: 5vh auto;
+        margin: 0 auto;
     
         .card {
             width: 100px; // Reduce size
